// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Button Has disabled styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c1 {
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
  padding: 0;
  width: 32px;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:hover {
  background-color: #005F7A;
}

.c1:disabled {
  background-color: #99CCDB;
}

<button
  aria-label="home"
  class="c0 c1"
  disabled=""
  type="submit"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</button>
`;

exports[`Icon Button Has mobile styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c1 {
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
  padding: 0;
  width: 48px;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:hover {
  background-color: #005F7A;
}

.c1:disabled {
  background-color: #99CCDB;
}

<button
  aria-label="home"
  class="c0 c1"
  type="submit"
>
  <svg
    color="currentColor"
    focusable="false"
    height="20"
    width="20"
  />
</button>
`;

exports[`Icon Button Has primary styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c1 {
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
  padding: 0;
  width: 32px;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:hover {
  background-color: #005F7A;
}

.c1:disabled {
  background-color: #99CCDB;
}

<button
  aria-label="home"
  class="c0 c1"
  type="submit"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</button>
`;

exports[`Icon Button Has secondary styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c1 {
  background-color: transparent;
  border-color: #0080A5;
  color: #0080A5;
  padding: 0;
  width: 32px;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:hover {
  border-color: #005F7A;
  color: #005F7A;
}

.c1:disabled {
  border-color: #99CCDB;
  color: #99CCDB;
}

<button
  aria-label="home"
  class="c0 c1"
  type="submit"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</button>
`;

exports[`Icon Button Has tertiary styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c1:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

<button
  aria-label="home"
  class="c0 c1"
  type="submit"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</button>
`;
